# Kaggle-Titanic

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
titanic_kaggle/: __init__.py  dataset.py  features.py  plots.py
titanic_kaggle/modeling/: predict.py  train.py
